# netflix_backend_rust

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: main.rs  utils.rs  verify_token.rs
src/models/: list.rs  list_mod.rs  mod.rs  movie.rs  movie_mod.rs  user.rs  user_mod.rs  users.rs  users_mod.rs
src/routes/: auth.rs  lists.rs  mod.rs  movies.rs  users.rs
