[package]
name = "netflix_backend_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netflix_backend_rust"
path = "src/main.rs"


[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.9.0"
base64 = "0.22.1"
bson = "2.12.0"
chrono = "0.4.38"
decode = "0.0.0"
dotenv = "0.15.0"
futures-util = "0.3.30"
hyper = "1.4.1"
jsonwebtoken = "9.3.0"
log = "0.4.22"
mongodb = "3.1.0"
openssl = "0.10.66"
rand_core = "0.6.4"
reqwest = "0.12.7"
serde = "1.0.210"
serde_json = "1.0.128"
serde_with = "3.9.0"
thiserror = "2.0.7"
