[package]
name = "netflix_backend_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netflix_backend_rust"
path = "src/main.rs"


[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.9.0"
base64 = "0.22.1"
bson = "2.13.0"
chrono = "0.4.39"
# decode = "0.0.0"
dotenv = "0.14.1"
env_logger = "0.11.6"
futures-util = "0.3.31"
hyper = "1.6.0"
jsonwebtoken = "9.3.1"
log = "0.4.25"
mongodb = "3.2.1"
openssl = "0.10.71"
rand_core = "0.6.4"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.138"
serde_with = "3.12.0"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
